2015-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/trigger, include/pqxx/trigger.hxx:
 - Remove deprecated trigger class.
2015-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/binarystring.hxx, src/binarystring.cxx:
 - Remove deprecated escape_binary functions.
2015-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/binarystring.cxx:
 - Remove an internal level of indirection that was no longer needed.
2015-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/extract-version:
 - Replace obsolete sed -E option.  Fixes #265.
2015-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/row.hxx:
 - Document slowness of indexing fields by name.
 - Fixes #274.  Thanks redrett.
2015-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/splitconfig, tools/template2mak.py:
 - Use /usr/bin/python instead of /usr/bin/python.  Closees #280.
2015-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/notification.hxx:
 - Remove spurious second inclusion of compiler-internal-pre.hxx.
 - Fixes #283.  Thanks Jeroen Walter.
2015-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/common-sample:
 - Document different libpq path when using MinGW.
 - Fixes #289.  Thanks ajonen.
2015-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt:
 - Note not to combine 32-bit and 64-bit libraries.  Thanks J. Voelker.
2015-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/largeobject.cxx:
 - Include <algorithm> so that min()/max() work.
2015-01-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/gcc-4.4/pqxx/config-internal-compiler.h,
 configitems, configure.ac.in, include/pqxx/config.h.in:
 - Remove check for nonstandard, and unneeded, strnlen().
2015-01-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 README-UPGRADE,
 config/sample-headers/compiler/gcc-4.4/pqxx/config-public-compiler.h,
 configitems, configure.ac.in, include/pqxx/config.h.in,
 include/pqxx/connection_base.hxx:
 - Remove deprecated "noticer" definitions.